k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: munje-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - munje.digraph.app
    secretName: digraph-tls
  rules:
  - host: munje.digraph.app
    http:
      paths:
      - backend:
          serviceName: munje-frontend
          servicePort: 8080
